--- a/src/style.css
+++ b/src/style.css
@@ -3,12 +3,15 @@
 * {
   margin: 0;
   padding: 0;
+  scrollbar-width: none;
 }
 
 :root {
   box-sizing: border-box;
   font-size: inherit;
   font-family: "Roboto", sans-serif;
+  scrollbar-width: none;
+  
 }
 
 body {
@@ -160,11 +163,11 @@ li > img:hover {
   height: 30px;
   width: 30px;
   border-radius: 50%;
-  font-size: 1.4rem;
+  padding-bottom: 5px;
+  font-size: 3rem;
   border: 0;
   background-color: #000000;
   color: white;
-  border: 2px solid white;
 }
 
 button {
@@ -224,8 +227,7 @@ button {
   color: red;
   font-size: 2rem;
   background-color: white;
-  padding-top: 5px;
-  margin-bottom: -5px;
+  font-family: 'Roboto';
 }
 
 .todo > div {
